Refactor project to TypeScript and enhance functionality
- Migrated the entire codebase from JavaScript to TypeScript for improved type safety and maintainability.
- Updated Docker and Docker Compose configurations to support TypeScript execution.
- Replaced the existing bot server implementation with a TypeScript version, enhancing the structure and readability.
- Introduced TypeScript configuration files and updated package.json scripts for building and running the application.
- Removed legacy JavaScript files and adjusted the README to reflect the new TypeScript setup and usage instructions.
- Enhanced the development workflow with new task commands for building, type-checking, and running the application.

--- a/compose.dev.yml
+++ b/compose.dev.yml
@@ -10,6 +10,7 @@ services:
     ports:
       - "3000:3000"
     volumes:
-      - ./:/usr/src/app          # Live‑reload your entire repo
+      - ./:/usr/src/app          # Live-reload your entire repo
       - /opt/costcodle/data:/data
-    command: npx nodemon --watch bot --watch web bot/server.js 
+    # Use tsx for direct TypeScript execution in development
+    command: npx tsx --watch src/bot/server.ts 
