--- a/package.json
+++ b/package.json
@@ -2,12 +2,25 @@
   "name": "costcodle-tracker",
   "version": "1.0.0",
   "description": "Discord bot to track Costcodle scores and display statistics",
-  "main": "bot/server.js",
+  "main": "dist/bot/server.js",
+  "type": "module",
   "scripts": {
-    "start": "node bot/server.js",
-    "dev": "nodemon --watch bot --watch web bot/server.js",
-    "dev:no-discord": "NODE_ENV=development nodemon --watch bot --watch web bot/server.js",
-    "lint": "eslint bot/**/*.js web/js/*.js"
+    "build": "tsc --build",
+    "build:bot": "tsc --project src/bot",
+    "build:web": "tsc --project src/web",
+    "build:clean": "rimraf dist",
+    "build:watch": "tsc --build --watch",
+    "start": "node dist/bot/server.js",
+    "start:js": "node bot/server.js",
+    "dev": "concurrently \"npm run build:watch\" \"nodemon --watch dist/bot dist/bot/server.js\"",
+    "dev:js": "nodemon --watch bot --watch web bot/server.js",
+    "dev:no-discord": "NODE_ENV=development concurrently \"npm run build:watch\" \"nodemon --watch dist/bot dist/bot/server.js\"",
+    "dev:no-discord:js": "NODE_ENV=development nodemon --watch bot --watch web bot/server.js",
+    "dev:ts": "tsx watch src/bot/server.ts",
+    "dev:ts:no-discord": "NODE_ENV=development tsx watch src/bot/server.ts",
+        "lint": "eslint src/**/*.ts",
+    "type-check": "tsc --noEmit",
+    "clean": "npm run build:clean"
   },
   "dependencies": {
     "cors": "^2.8.5",
@@ -19,8 +32,20 @@
     "validator": "^13.11.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
+    "@types/node": "^20.10.6",
+    "@types/sqlite3": "^3.1.11",
+    "@types/validator": "^13.11.7",
+    "@typescript-eslint/eslint-plugin": "^6.16.0",
+    "@typescript-eslint/parser": "^6.16.0",
+    "concurrently": "^8.2.2",
+    "eslint": "^8.56.0",
     "live-server": "^1.2.2",
-    "nodemon": "^3.0.2"
+    "nodemon": "^3.0.2",
+    "rimraf": "^5.0.5",
+    "tsx": "^4.6.2",
+    "typescript": "^5.3.3"
   },
   "engines": {
     "node": ">=18.0.0"
@@ -29,6 +54,7 @@
     "discord",
     "bot",
     "costcodle",
-    "tracking"
+    "tracking",
+    "typescript"
   ]
 }
