Implement production-ready enhancements and update configurations
- Added .nvmrc file to specify Node.js version 20 for consistency.
- Updated Dockerfile for a multi-stage build, optimizing the production image and running as a non-root user.
- Enhanced environment variable configuration in compose.yaml and README for better security and flexibility.
- Implemented CORS protection and health checks in the server for improved security and reliability.
- Modified database handling to support NULL values for failed games and added bulk insert functionality for performance.
- Updated TypeScript configurations and validation functions to accommodate new score handling logic.
- Enhanced user statistics and achievements calculations to handle potential NULL scores gracefully.

--- a/compose.yaml
+++ b/compose.yaml
@@ -29,6 +29,9 @@ services:
     
     environment:
       - DISCORD_TOKEN=${DISCORD_TOKEN}
+      - DISCORD_CHANNEL_ID=${DISCORD_CHANNEL_ID}
+      - CORS_ORIGINS=${CORS_ORIGINS:-}
+      - ADMIN_KEY=${ADMIN_KEY:-}
       - NODE_ENV=production
     
     network_mode: service:costcodle-ts
