--- a/src/web/tsconfig.json
+++ b/src/web/tsconfig.json
@@ -2,8 +2,8 @@
   "extends": "../../tsconfig.json",
   "compilerOptions": {
     "target": "ES2022",
-    "module": "ESNext",
-    "moduleResolution": "node",
+    "module": "Node16",
+    "moduleResolution": "node16",
     "outDir": "../../dist/web",
     "rootDir": ".",
     "lib": ["ES2022", "DOM", "DOM.Iterable"],
@@ -13,7 +13,7 @@
     "moduleDetection": "force"
   },
   "include": [
-    "./js/**/*"
+    "./**/*"
   ],
   "exclude": [
     "node_modules",
